Bug 79817 - FILESAVE: Databinding xml tag have duplicates attributes
Summary: FILESAVE: Databinding xml tag have duplicates attributes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Rohit Deshmukh
URL:
Whiteboard: BSA target:4.4.0 target:4.3.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-09 07:34 UTC by Rohit Deshmukh
Modified: 2014-06-11 10:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original file (23.81 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-09 07:34 UTC, Rohit Deshmukh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rohit Deshmukh 2014-06-09 07:34:43 UTC
Created attachment 100702 [details]
Original file

Problem description: 

Steps to reproduce:
1. Load the attached DOCX in LO
2. Save as NEW.DOCX
3. Open the NEW.DOCX in Word


Current behavior:
File gets corrupt

Expected behavior:
File should open without any error

              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Commit Notification 2014-06-11 08:30:58 UTC
Rohit Deshmukh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88f84eb1b0eebbb7e0a072f1e7001a9207ebbe9e

fdo#79817:Fix for corruption having databinding have duplicates attributes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-06-11 10:26:43 UTC
Rohit Deshmukh committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73d1c167c029594eb0be8eb24c065de39b9f69ab&h=libreoffice-4-3

fdo#79817:Fix for corruption having databinding have duplicates attributes


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.