fdo#79817:Fix for corruption having databinding have duplicates attributes

File contains SDT content, in which after export databinding have duplicate attribute.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/9693

Change-Id: Ibe828964c054bdd5a63b5c0c903bc7441d953d72